Finally fixed the scrollbar height. Removing CPU tab by lack of implementation.

--- a/res/app/layout/stf-se7en.css
+++ b/res/app/layout/stf-se7en.css
@@ -22,3 +22,7 @@
 .padded-small {
   padding: 5px;
 }
+
+::-webkit-scrollbar {
+  height: 8px;
+}
